# GrandEII

./: .gitignore  LICENSE  README.md
GRANDEII_ARDUINO/: GRANDEII_ARDUINO.ino
GRANDEII_PC/data/: data.json
GRANDEII_PC/src/: CMakeLists.txt  main.c
GRANDEII_PC/src/arduino/: arduino_utils.c  arduino_utils.h  communication.c  communication.h  main.c  makefile
GRANDEII_PC/src/controller/: controller.c  controller.h  light_wizard.c  light_wizard.h  live_controller.c  live_controller.h  popup_controller.c  popup_controller.h
GRANDEII_PC/src/model/: CMakeLists.txt_do_not_use  color.c  color.h  function.c  function.h  group.c  group.h  group_manager.c  group_manager.h  json_parser.c  json_parser.h  json_writer.c  json_writer.h  light.c  light.h  list_common.c  list_common.h  main.c
GRANDEII_PC/src/unit_test/: UTest-color.c  UTest-color.h  UTest-function.c  UTest-function.h  UTest-gmanager.c  UTest-gmanager.h  UTest-group.c  UTest-group.h  UTest-json_parser.c  UTest-json_parser.h  UTest-json_writer.c  UTest-json_writer.h  UTest-light.c  UTest-light.h  UTest-list.c  UTest-list.h  UTest_main.c  UTest_main.h  main.c
GRANDEII_PC/src/view/: TO_DO.txt  demo.deiivice  effect.c  effect.h  interface.ui  interface.ui~  main.c  style.css  view.c  view.h  view_popup.c  view_popup.h
docs/: Doxyfile  norme_deiivice.txt
